RESOLVED FIXED171750
REGRESSION(r213499): Emoji with Fitzpatrick modifiers are drawn as two separate glyphs
https://bugs.webkit.org/show_bug.cgi?id=171750
Summary REGRESSION(r213499): Emoji with Fitzpatrick modifiers are drawn as two separa...
Myles C. Maxfield
Reported 2017-05-05 14:18:35 PDT
Emoji with Fitzpatrick modifiers are drawn as two separate glyphs
Attachments
Patch (5.12 KB, patch)
2017-05-05 14:22 PDT, Myles C. Maxfield
no flags
Patch (5.12 KB, patch)
2017-05-05 14:23 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2017-05-05 14:22:25 PDT
Myles C. Maxfield
Comment 2 2017-05-05 14:23:11 PDT
WebKit Commit Bot
Comment 3 2017-05-06 10:54:20 PDT
Comment on attachment 309210 [details] Patch Clearing flags on attachment: 309210 Committed r216331: <http://trac.webkit.org/changeset/216331>
WebKit Commit Bot
Comment 4 2017-05-06 10:54:21 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 5 2017-05-07 16:57:43 PDT
Note You need to log in before you can comment on or make changes to this bug.