REGERSSION(r213499): Emoji with Fitzpatrick modifiers are drawn as two separate glyphs https://bugs.webkit.org/show_bug.cgi?id=171750 <rdar://problem/31122612>

Reviewed by Zalan Bujtas.

Source/WebCore:

Emoji with Fitzpatrick modifiers need to take our complex text codepath. When looking through
the string to determine which code path to use, we ask if a particular codepoint is an emoji
group candidate. r213499 expanded the set of these candidates to include Fitzpatrick modifiers,
which means the next "if" statement would never be hit. Instead, we should check that "if"
statement first (because order is not important here). The next checks do not intersect with
any emoji group candidates.

Test: fast/text/fitzpatrick-combination.html

* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::characterRangeCodePath):

LayoutTests:

* fast/text/fitzpatrick-combination-expected.html: Added.
* fast/text/fitzpatrick-combination.html: Added.


Canonical link: https://commits.webkit.org/188687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216331 268f45cc-cd09-0410-ab3c-d52691b4dbfc